# MAB_course_work_HSE

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all.ps1  run_all.sh
chapters/: abbreviations.tex  appendix.tex  conclusion.tex  experiments.tex  literature.tex  meta.txt
docs/: appendix.md  conclusion_chapter.md  experiments_chapter.md  front_matter.md  literature_review_academic.md
notebooks/: 01_synthetic_benchmark.ipynb  02_dataset_benchmark.ipynb  03_ablation_and_discussion.ipynb  04_contextual_extension.ipynb
outputs/ab_validity/: summary_h20000.csv
outputs/cuped_power/: e15_summary.csv
outputs/extended_full/: e1_synthetic_summary.csv  e8_obd_batch_summary.csv  e8b_contextual_synthetic_summary.csv  full_report.json  ope_matrix_summary.csv  streaming_ope_matrix_summary.csv
outputs/inference_valid/: e11_summary.csv
outputs/obd_pair/: inference_summary.csv  ope_summary.csv  pair_selection.csv
outputs/sequential_valid/: e14_summary.csv
outputs/synthetic_scenarios/: bootstrap_regret_vs_fixed.csv
scripts/: generate_coursework_figures.py  git_init_clean.ps1  prepare_click_env.py  prepare_open_bandit.py
src/: __init__.py
src/ab_testing/: __init__.py  bandit_logs.py  cuped.py  design.py  inference.py  propensity.py  (+2 more)
tests/: test_ab_inference.py  test_bandits.py  test_bootstrap.py  test_cuped.py  test_environments.py  test_inference_solutions.py  test_metrics.py  test_obd_pairwise.py  test_ope.py  test_pipeline.py  test_policy_latency.py  test_prepare_open_bandit.py  test_runner.py  test_sequential.py  test_synthetic_scenarios.py
(+44 files in other folders)
